[tool.poetry]
name = "specifipy"
version = "0.5.0"
description = "Python package for auto-generating code diagrams"
authors = ["Bartosz Budzyński <hi@bartosz.blog>"]

[tool.poetry.dependencies]
python = "^3.8"
snakemd = "^0.11.0"
docstring-parser = "^0.15"
py-d2 = "1.0.0"
javalang = "0.13.0"
tree-sitter = ">=0.23.0"
tree-sitter-typescript = ">=0.23.0"

[tool.poetry.scripts]
specifipy = "specifipy.cli:main"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.8.0,<4.0.0"
# Force safe versions for known vulnerable transitive deps in the pre-commit toolchain.
virtualenv = ">=20.26.6"
filelock = ">=3.15.4"
setuptools = ">=70.0.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
